# Landing_Page_Image

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  config.py  main.py  pipeline.py  schemas.py  store.py
app/prompts/: copy_system_ar.txt
app/prompts/sections/: _shared.j2  before_after.j2  closing.j2  education.j2  faq.j2  features.j2  hero.j2  lifestyle.j2  testimonials.j2
app/services/: analyzer.py  copy_writer.py  image_gen.py  researcher.py  stitcher.py  text_overlay.py  yunwu_client.py
app/static/: style.css
app/templates/: index.html  job.html  settings.html
docs/: SETTINGS.md
nginx/: landing.conf
scripts/: vps_bootstrap.sh
tests/: __init__.py  conftest.py  test_analyzer.py  test_copy_writer.py  test_image_gen.py  test_prompts_json_safe.py  test_stitcher.py  test_text_overlay.py  test_yunwu_client.py
